File name change

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             I am passionate about creating user-centered designs, solving real-world problems through technology, and
             continuously improving my skills in the full stack ecosystem.</p>
 
-         <a href="My Resume.pdf" class="btn-box">My Resume</a>
+         <a href="Mahima Resume.pdf" class="btn-box">My Resume</a>
       </div>
    </section>
    <h1 class="sub-title">My <span>skills</span></h1>
